# kcscope

./: CMakeLists.txt  kdevcscope.desktop
src/: kcscope.cpp  kcscope.h  kcscope.ui  kcscopeplugin.cpp  kcscopeplugin.h  kdevcscope.ui  projectviewplugin.cpp  projectviewplugin.h
