PROJECT(kcscope)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules)

FIND_PACKAGE(KDE4 REQUIRED)
FIND_PACKAGE(KDevPlatform REQUIRED)

INCLUDE_DIRECTORIES(
	include
	${KDE4_INCLUDES}
	${KDEVPLATFORM_INCLUDE_DIR}
	${CMAKE_CURRENT_BINARY_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}
	${CMAKE_SOURCE_DIR}
)

KDE4_ADD_PLUGIN(kdevcscopeplugin
	src/projectviewplugin.h
	src/projectviewplugin.cpp
)

TARGET_LINK_LIBRARIES(kdevcscopeplugin ${KDEVPLATFORM_INTERFACES_LIBRARIES} ${KDEVPLATFORM_LANGUAGE_LIBRARIES})

INSTALL(TARGETS kdevcscopeplugin DESTINATION ${PLUGIN_INSTALL_DIR})
INSTALL(FILES kdevcscope.desktop DESTINATION ${SERVICES_INSTALL_DIR})

ADD_CUSTOM_TARGET(uninstall "${CMAKE_COMMAND}"
	-P "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake"
)
